fix spacing in footer

--- a/test/dummy/app/components/dummy/mailer/footer_component.sass
+++ b/test/dummy/app/components/dummy/mailer/footer_component.sass
@@ -9,7 +9,7 @@ $dummy-mailer-styles: false !default
       padding: 32px 0 0 0
 
     &__socials-title-wrapper
-      padding: 40px 0 0 0
+      padding: 40px 0 16px 0
 
     &__socials-table-wrapper
       padding: 0 0 32px 0
@@ -28,6 +28,8 @@ $dummy-mailer-styles: false !default
     &__contact-title, &__socials-title
       +mailer-font-size-display-xs
       display: block
+
+    &__contact-title
       margin: 0 0 16px 0
 
     &__contact-detail
